sandbox/output
OneHundredDoors.java:50: error: ')' expected
            if ("O".equals(doors.get(door)) {
                                           ^
1 error
